Fixed removal of wrong text-aid-too env variable

--- a/systemd-user/.config/systemd/user/text-aid-too.service
+++ b/systemd-user/.config/systemd/user/text-aid-too.service
@@ -5,7 +5,7 @@ Documentation=https://github.com/smblott-github/text-aid-too#text-aid-too
 [Service]
 Type=simple
 #Environment=;P
-#Environment=;P
+Environment="TEXT_AID_TOO_EDITOR=emacsclient"
 ExecStart=/usr/bin/text-aid-too
 Restart=always
 
