Changes to xterm and youtube theme
 - Changed the XTerm background to match the general theme background

 - Added user channel styles to youtube theme

--- a/chromium/.config/Chromium/Userstyles/youtube/makefile
+++ b/chromium/.config/Chromium/Userstyles/youtube/makefile
@@ -6,7 +6,7 @@ FLAGS =
 
 _OBJ = youtube_main.css youtube_subscriptions.css youtube_playerpage.css\
        youtube_player.css youtube_comments.css youtube_home.css\
-       youtube_history.css youtube_channel.css
+       youtube_history.css youtube_channel.css youtube_userchannel.css
 OBJ = $(addprefix $(ODIR)/,$(_OBJ))
 
 $(ODIR)/%.css: src/%.styl
