--- a/systemd-user/.config/systemd/user/text-aid-too.service
+++ b/systemd-user/.config/systemd/user/text-aid-too.service
@@ -6,7 +6,7 @@ Documentation=https://github.com/smblott-github/text-aid-too#text-aid-too
 Type=simple
 #Environment=;P
 Environment="TEXT_AID_TOO_EDITOR=emacsclient"
-ExecStart=/usr/bin/text-aid-too
+ExecStart=/usr/bin/text-aid-too --markdown
 Restart=always
 
 [Install]
