Update gtk config

--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Numix-ArchBlue
+gtk-theme-name=Numix-Cyan
 gtk-icon-theme-name=Adwaita
 gtk-cursor-theme-name=pixelfun3
 gtk-cursor-theme-size=0
@@ -11,3 +11,7 @@ gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
 gtk-xft-rgba=rgb
+gtk-application-prefer-dark-theme=true
+gtk-font-name=Sans 10
+gtk-toolbar-style=GTK_TOOLBAR_BOTH
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
