--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,6 +2,9 @@
 	email = tm@tlater.net
 	name = Tristan Maat
 
+[filter "text-aid-too"]
+	clean = "sed -e 's/^Environment=\"TEXT_AID_TOO_SECR.*/#Environment=;P/'"
+
 [push]
 	default = simple
 
