Add local changes

--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -86,7 +86,7 @@ bind_to_address		"localhost"
 # This setting is the TCP port that is desired for the daemon to get assigned
 # to.
 #
-#port				"6600"
+# port				"6600"
 #
 # This setting controls the type of information which is logged. Available
 # setting arguments are "default", "secure" or "verbose". The "verbose" setting
@@ -206,14 +206,22 @@ input {
 #
 # An example of an ALSA output:
 #
+# audio_output {
+# 	type		"pulse"
+# 	name		"PULSE"
+#         server          "localhost"
+# ##	device		"hw:0,0"	# optional
+# 	# mixer_type	"software"
+# ##	mixer_device	"default"	# optional
+# ##	mixer_control	"PCM"		# optional
+# ##	mixer_index	"0"		# optional
+# }
+
 audio_output {
-	type		"alsa"
-	name		"ALSA"
-##	device		"hw:0,0"	# optional
-	mixer_type	"software"
-##	mixer_device	"default"	# optional
-##	mixer_control	"PCM"		# optional
-##	mixer_index	"0"		# optional
+	type		"pulse"
+	name		"PULSE feed"
+	# server	"remote_server"		# optional
+	# sink		"remote_server_sink"	# optional
 }
 
 audio_output {
@@ -285,13 +293,6 @@ audio_output {
 #}
 #
 # An example of a pulseaudio output (streaming to a remote pulseaudio server)
-#
-#audio_output {
-#	type		"pulse"
-#	name		"My Pulse Output"
-##	server		"remote_server"		# optional
-##	sink		"remote_server_sink"	# optional
-#}
 #
 # An example of a winmm output (Windows multimedia API).
 #
