--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -37,6 +37,18 @@
     </edit>
   </match>
 
+  <match target="pattern">
+      <test name="lang" compare="contains">
+          <string>ja</string>
+      </test>
+      <test name="family">
+          <string>sans-serif</string>
+      </test>
+      <edit name="family" mode="prepend">
+          <string>VL Gothic</string>
+      </edit>
+  </match>
+
   <!-- Fallbacks -->
   <alias>
     <family>sans-serif</family>
@@ -60,3 +72,21 @@
   </alias>
 
 </fontconfig>
+
+<!-- <match> -->
+<!-- 		If you don't want to use WenQuanYi Zen Hei font for zh-tw etc, -->
+<!-- 		you can use zh-cn instead of zh. -->
+<!-- 		Please note, even if you set zh-cn, it still matches zh. -->
+<!-- 		if you don't like it, you can use compare="eq" -->
+<!-- 		instead of compare="contains". -->
+<!-- 	-\-> -->
+<!-- 	<test name="lang" compare="contains"> -->
+<!-- 		<string>zh</string> -->
+<!-- 	</test> -->
+<!-- 	<test name="family"> -->
+<!-- 		<string>serif</string> -->
+<!-- 	</test> -->
+<!-- 	<edit name="family" mode="prepend"> -->
+<!-- 		<string>WenQuanYi Zen Hei</string> -->
+<!-- 	</edit> -->
+<!-- </match> -->
