gtk: Update theme

--- a/dotfiles/gtk/gtk-3.0/settings.ini
+++ b/dotfiles/gtk/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=Numix-Cyan
-gtk-icon-theme-name=Adwaita
+gtk-theme-name=Arc-Dark
+gtk-icon-theme-name=ePapirus
 gtk-cursor-theme-name=pixelfun3
 gtk-cursor-theme-size=0
 gtk-button-images=1
