fonts.conf: Fix recent GNOME changes overriding my fonts

--- a/dotfiles/fonts.conf
+++ b/dotfiles/fonts.conf
@@ -49,6 +49,20 @@
       </edit>
   </match>
 
+  <!-- Get rid of GNOME default fonts -->
+  <alias>
+      <family>Cantarell</family>
+      <prefer>
+          <family>sans-serif</family>
+      </prefer>
+  </alias>
+  <alias>
+      <family>Source Code Pro</family>
+      <prefer>
+          <family>monospace</family>
+      </prefer>
+  </alias>
+
   <!-- Fallbacks -->
   <alias>
     <family>sans-serif</family>
