--- a/dotfiles/emacs.d/.gitignore
+++ b/dotfiles/emacs.d/.gitignore
@@ -1,14 +1,15 @@
-auto-save-list/
 backups/
 elpa/
 erc/
 transient/
 .python-environments/
 eshell/
+share/docsets/
+share/auto-save-list*
 flycheck_*
 *.elc
 config/custom.el
 .last-package-update-day
 tramp
 projectile-bookmarks.eld
-
+.lsp-session-*
