nix: Add font configuration

--- a/dotfiles/fonts.conf
+++ b/dotfiles/fonts.conf
@@ -1,52 +1,39 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-
-  <!-- Default font -->
-  <match>
-    <edit mode="prepend" name="family">
-      <string>Noto Sans</string>
-    </edit>
-  </match>
-
-  <!-- Family defaults -->
   <match target="pattern">
-    <test qual="any" name="family">
-      <string>sans-serif</string>
-    </test>
-    <edit name="family" mode="prepend" binding="same">
-      <string>Noto Sans</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>serif</string>
-    </test>
-    <edit name="family" mode="prepend" binding="same">
-      <string>Noto Serif</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test qual="any" name="family">
+    <test name="family" qual="any">
       <string>monospace</string>
     </test>
-    <edit name="family" mode="prepend" binding="same">
+    <edit binding="strong" mode="prepend" name="family">
       <string>Hack</string>
     </edit>
   </match>
 
   <match target="pattern">
-      <test name="lang" compare="contains">
-          <string>ja</string>
-      </test>
-      <test name="family">
-          <string>sans-serif</string>
-      </test>
-      <edit name="family" mode="prepend">
-          <string>VL Gothic</string>
-      </edit>
+    <test name="family" qual="any">
+      <string>sans-serif</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Noto Sans CJK KR</string>
+      <string>Noto Sans CJK</string>
+      <string>Noto Sans CJK TC</string>
+      <string>Noto Sans CJK JP</string>
+      <string>Noto Sans</string>
+    </edit>
+  </match>
+
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>serif</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Noto Serif CJK KR</string>
+      <string>Noto Serif CJK</string>
+      <string>Noto Serif CJK TC</string>
+      <string>Noto Serif CJK JP</string>
+      <string>Noto Serif</string>
+    </edit>
   </match>
 
   <!-- Get rid of GNOME default fonts -->
@@ -86,21 +73,3 @@
   </alias>
 
 </fontconfig>
-
-<!-- <match> -->
-<!-- 		If you don't want to use WenQuanYi Zen Hei font for zh-tw etc, -->
-<!-- 		you can use zh-cn instead of zh. -->
-<!-- 		Please note, even if you set zh-cn, it still matches zh. -->
-<!-- 		if you don't like it, you can use compare="eq" -->
-<!-- 		instead of compare="contains". -->
-<!-- 	-\-> -->
-<!-- 	<test name="lang" compare="contains"> -->
-<!-- 		<string>zh</string> -->
-<!-- 	</test> -->
-<!-- 	<test name="family"> -->
-<!-- 		<string>serif</string> -->
-<!-- 	</test> -->
-<!-- 	<edit name="family" mode="prepend"> -->
-<!-- 		<string>WenQuanYi Zen Hei</string> -->
-<!-- 	</edit> -->
-<!-- </match> -->
