stumpwm: Use a user cache to avoid writing to nix store fasl files
Previously, since the stumpwm modules repository was written to the
read-only nix store, loading any modules from there would break
because asdf would attempt to create object files in the source tree,
since nix configures it to expect object files in the source
tree (yes... This isn't as awful if the modules are pre-compiled).

This made it impossible to use the nixos wrapper directly. Instead, we
now set up custom caching in stumpwm, overriding the old behavior, and
we get a much nicer configuration.

--- a/dotfiles/stumpwm/config
+++ b/dotfiles/stumpwm/config
@@ -30,6 +30,18 @@
   (asdf:require-system "xembed")
   (asdf:require-system "clx-truetype")
 
+  ;; Modules can only be loaded on nixos if they are pre-compiled with
+  ;; .fasl files, otherwise asdf will try to create a fasl file in the
+  ;; nix store... Since this would be a lot of effort for
+  ;; stumpwm-contrib, we set up custom caching in ~/.cache.
+  ;;
+  ;; FIXME: Instead of forcing output translations, it would be a lot
+  ;; nicer simply to precompile the stumpwm modules we need. This
+  ;; would probably mean individually packaging all stumpwm modules,
+  ;; but may be worth the effort.
+  (asdf:initialize-output-translations
+   '(:output-translations :ignore-inherited-configuration :enable-user-cache))
+
   (let ((contrib-dir (or (sb-unix::posix-getenv "STUMPWM_CONTRIB_DIR")
                          "/usr/share/stumpwm/modules")))
     (when (probe-file contrib-dir)
