stumpwm: Add settings to make on-the-fly changes with emacs

--- a/dotfiles/stumpwm/config
+++ b/dotfiles/stumpwm/config
@@ -170,3 +170,7 @@
   (run-shell-command "dex -ae stumpwm"))
 
 ;;; init.lisp ends here
+
+;; Local Variables:
+;; stumpwm-shell-program: "nix-shell -p stumpish --command stumpish"
+;; End:
