--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,8 +14,9 @@ jobs:
           extra_nix_config: |
             experimental-features = nix-command flakes
       - run: |
-          find . -name '*.nix' \
+          find . -type f -name '*.nix' \
                  ! -name 'hardware-configuration.nix' \
+                 ! -name 'generated.nix' \
                  -exec nix run nixpkgs#nixfmt -- -c {} +
 
   check:
