--- a/nixpkgs/pkgs/nvfetcher.toml
+++ b/nixpkgs/pkgs/nvfetcher.toml
@@ -2,6 +2,12 @@
 src.github_tag = "matthewbauer/bauer"
 fetch.github = "matthewbauer/bauer"
 
+[firefox-ui-fix]
+src.git = "https://github.com/black7375/Firefox-UI-Fix"
+# For the time being, until this project figures out its releasening
+src.branch = "master"
+fetch.github = "black7375/Firefox-UI-Fix"
+
 [gauth]
 src.github_tag = "pcarrier/gauth"
 fetch.github = "pcarrier/gauth"
