--- a/nixpkgs/pkgs/nvfetcher.toml
+++ b/nixpkgs/pkgs/nvfetcher.toml
@@ -34,3 +34,8 @@ fetch.github = "jumper047/tridactyl_emacs_config"
 [zsh-background-notify]
 src.git = "https://github.com/t413/zsh-background-notify"
 fetch.github = "t413/zsh-background-notify"
+
+# Elpa packages that have moved to the compressed archive
+[elpa-spinner]
+src.manual = "1.7.3"
+fetch.url = "https://elpa.gnu.org/packages/spinner-1.7.3.el.lz"
