pipewire: Correctly substitute rnnoise library location

--- a/nixpkgs/configurations/tty-programs/filter-chain.conf
+++ b/nixpkgs/configurations/tty-programs/filter-chain.conf
@@ -30,7 +30,7 @@ context.modules = [
                     {
                         type = ladspa
                         name = rnnoise
-                        plugin = /nix/store/9mab0pqk9likvcxs9ay4imzsr5fbcqs4-rnnoise-plugin-0.91/lib/ladspa/librnnoise_ladspa.so
+                        plugin = ${rnnoise-plugin}/lib/ladspa/librnnoise_ladspa.so
                         label = noise_suppressor_stereo
                         control = {
                             "VAD Threshold (%)" = 95.0
