--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,7 +14,8 @@ jobs:
           extra_nix_config: |
             experimental-features = nix-command flakes
       - run: |
-          find . -type f -name '*.nix' \
+          find . -path ./dotfiles/emacs.d/share/yatemplate -prune \
+                 -type f -name '*.nix' \
                  ! -name 'hardware-configuration.nix' \
                  ! -name 'generated.nix' \
                  -exec nix run nixpkgs#nixfmt -- -c {} +
