--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,11 +10,11 @@ jobs:
           fetch-depth: 0
       - uses: cachix/install-nix-action@v16
       - run: |
-          find . -path ./dotfiles/emacs.d/share/yatemplate -prune \
-                 -type f -name '*.nix' \
-                 ! -name 'hardware-configuration.nix' \
-                 ! -name 'generated.nix' \
-                 -exec nix run nixpkgs#nixfmt -- -c {} +
+          nix run --inputs-from .# alejandra -- \
+              --check \
+              --exclude ./dotfiles/emacs.d/share/yatemplate/ \
+              --exclude ./nixpkgs/pkgs/_sources/ \
+              .
 
   check:
     name: Check nix correctness
