sources.nix: Update
ohmyzsh: c35ca17258dd870f1724eeb92e9077177d2e3bed → 7ea8a93bb8fb04a070960048aa0b5dca639456a8
stumpwm: ∅ → fff2508fd54b4035b0d80bafbd75a13f1756130f
firefox-ui-fix: 278f74f41ecbfa9a280f6b9c701ead543d42b3ff → 3fda00e12cdead3b039cd06e154dca8bd16040d8

--- a/pkgs/nvfetcher.toml
+++ b/pkgs/nvfetcher.toml
@@ -17,6 +17,10 @@ src.git = "https://github.com/ohmyzsh/ohmyzsh"
 src.branch = "master"
 fetch.github = "ohmyzsh/ohmyzsh"
 
+[stumpwm]
+src.git = "https://github.com/stumpwm/stumpwm"
+fetch.github = "stumpwm/stumpwm"
+
 [stumpwm-contrib]
 src.git = "https://github.com/stumpwm/stumpwm-contrib"
 src.branch = "master"
