github: Fix nvfetcher action running against API limits

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -26,7 +26,9 @@ jobs:
           git_committer_name: GitHub automation
           git_committer_email: tm@tlater.net
       - run: nix flake update --commit-lock-file
-      - run: nix run .#commit-nvfetcher
+      - run: |
+          echo -e '[keys]\ngithub = "${{ secrets.GITHUB_TOKEN }}"' > /tmp/github-key.toml
+          nix run .#commit-nvfetcher -L
       - uses: peter-evans/create-pull-request@v4
         with:
           branch: bot/update
