hyprland: Add desktop background

--- a/home-config/dotfiles/hyprland.conf
+++ b/home-config/dotfiles/hyprland.conf
@@ -3,6 +3,8 @@ env = XCURSOR_SIZE,24
 exec-once = systemctl --user start hm-graphical-session.target
 
 misc {
+  disable_hyprland_logo = yes
+  disable_splash_rendering = yes
   vrr = 2
   # Maybe enable these when we have dpms working?
   #
