hyprland: Add screenshot keybindings

--- a/home-config/dotfiles/hyprland.conf
+++ b/home-config/dotfiles/hyprland.conf
@@ -94,3 +94,17 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Screenshot bindings
+bind = $mainMod,s,submap,screenshot
+submap = screenshot
+
+# Top-level bindings, just copysave everything
+bind = , a, exec, grimblast copysave output
+bind = , a, submap, reset
+bind = , c, exec, grimblast copysave active
+bind = , c, submap, reset
+bind = , r, exec, grimblast copysave area
+bind = , r, submap, reset
+
+submap = reset
