hyprland: Allow escaping from screenshot mode with escape

--- a/home-config/dotfiles/hyprland.conf
+++ b/home-config/dotfiles/hyprland.conf
@@ -106,5 +106,6 @@ bind = , c, exec, grimblast copysave active
 bind = , c, submap, reset
 bind = , r, exec, grimblast copysave area
 bind = , r, submap, reset
+bind = , escape, submap, reset
 
 submap = reset
