--- a/home-config/dotfiles/hyprland.conf
+++ b/home-config/dotfiles/hyprland.conf
@@ -106,3 +106,6 @@ bind = , r, submap, reset
 bind = , escape, submap, reset
 
 submap = reset
+
+# Copy the password for the current window from keepassxc
+bind = $mainMod, l, exec, keepassxc-copy
