--- a/home-config/dotfiles/hyprland.conf
+++ b/home-config/dotfiles/hyprland.conf
@@ -6,10 +6,7 @@ misc {
   disable_hyprland_logo = yes
   disable_splash_rendering = yes
   vrr = 2
-  # Maybe enable these when we have dpms working?
-  #
-  # mouse_move_enables_dpms
-  # key_press_enables_dpms
+  key_press_enables_dpms = yes
 }
 
 input {
