cursor-theme: Set up system-wide cursor theme
Some issues remain:

- For some reason the theme on the wayland root remains the default
  cursor. This is only a problem on first launch, after that the cursor
  is always whatever it last was.
- When leaving an xwayland application it reverts to the default
  cursor, and is not scaled on hidpi.
- XCURSOR_SIZE is reset by hyprland on boot, so it only works on
  services like emacs.
- Rofi doesn't like scaling or themes.

--- a/home-config/dotfiles/hyprland.conf
+++ b/home-config/dotfiles/hyprland.conf
@@ -1,5 +1,4 @@
-env = XCURSOR_SIZE,24
-
+exec-once = /etc/hyprland-theme-init
 exec-once = systemctl --user start hm-graphical-session.target
 
 misc {
