--- a/pkgs/nvfetcher.toml
+++ b/pkgs/nvfetcher.toml
@@ -2,6 +2,10 @@
 src.github_tag = "matthewbauer/bauer"
 fetch.github = "matthewbauer/bauer"
 
+[deepfilternet]
+src.github = "Rikorose/DeepFilterNet"
+fetch.github = "Rikorose/DeepFilterNet"
+
 [firefox-ui-fix]
 src.git = "https://github.com/black7375/Firefox-UI-Fix"
 # For the time being, until this project figures out its releasening
