hyprland: Fix deprecated blur options

--- a/home-config/dotfiles/hyprland.conf
+++ b/home-config/dotfiles/hyprland.conf
@@ -21,8 +21,11 @@ general {
 
 decoration {
   rounding = 10
-  blur_size = 3
   col.shadow = rgba(1a1a1aee)
+
+  blur {
+    size = 3
+  }
 }
 
 animations {
