--- a/home-config/dotfiles/hyprland.conf
+++ b/home-config/dotfiles/hyprland.conf
@@ -14,6 +14,8 @@ input {
 }
 
 general {
+  cursor_inactive_timeout = 5
+  no_cursor_warps = yes
   border_size = 2
   col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
   col.inactive_border = rgba(595959aa)
