hyprland: Use swayidle for display timeout

--- a/home-config/dotfiles/hyprland.conf
+++ b/home-config/dotfiles/hyprland.conf
@@ -1,5 +1,5 @@
 exec-once = /etc/hyprland-theme-init
-exec-once = systemctl --user start hm-graphical-session.target
+exec-once = systemctl --user import-environment \{,WAYLAND_\}DISPLAY HYPRLAND_INSTANCE_SIGNATURE; systemctl --user start hm-graphical-session.target
 
 misc {
   disable_hyprland_logo = yes
