--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,5 +7,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: cachix/install-nix-action@v18
+      - uses: DeterminateSystems/magic-nix-cache-action@main
       - run: |
           nix flake check -L
