--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -18,6 +18,7 @@ jobs:
           # Used only for things like nix-prefetch-*, which do not yet
           # seem to universally support flakes
           nix_path: nixpkgs=channel:nixos-unstable
+      - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: crazy-max/ghaction-import-gpg@v5
         with:
           gpg_private_key: ${{ secrets.GIT_SIGNING_KEY }}
