sway: Add idle inhibitors for chat/screenshare stuff

--- a/home-config/dotfiles/sway.conf
+++ b/home-config/dotfiles/sway.conf
@@ -68,3 +68,7 @@ bindsym {
   $mod+Shift+9 move container to workspace 9; workspace 9
   $mod+Shift+0 move container to workspace 10; workspace 10
 }
+
+## Idle inhibitors
+for_window [title="Element.*" app_id="firefox"] inhibit_idle visible
+for_window [title=".*Discord.*" app_id="firefox"] inhibit_idle visible
