--- a/pkgs/nvfetcher.toml
+++ b/pkgs/nvfetcher.toml
@@ -6,6 +6,10 @@ fetch.github = "matthewbauer/bauer"
 src.github = "Rikorose/DeepFilterNet"
 fetch.github = "Rikorose/DeepFilterNet"
 
+[drivestrike]
+src.cmd = "./get-drivestrike-version.sh"
+fetch.url = "https://app.drivestrike.com/static/yum/drivestrike.rpm"
+
 [firefox-ui-fix]
 src.git = "https://github.com/black7375/Firefox-UI-Fix"
 # For the time being, until this project figures out its releasening
