sway: Add multi-output support

--- a/home-config/dotfiles/sway.conf
+++ b/home-config/dotfiles/sway.conf
@@ -70,6 +70,9 @@ bindsym {
   $mod+Shift+8 move container to workspace 8; workspace 8
   $mod+Shift+9 move container to workspace 9; workspace 9
   $mod+Shift+0 move container to workspace 10; workspace 10
+
+  $mod+Shift+Left move workspace to output left
+  $mod+Shift+Right move workspace to output right
 }
 
 ## Idle inhibitors
