treewide: Resolve incompatibilities from 24.05

--- a/home-config/dotfiles/sway.conf
+++ b/home-config/dotfiles/sway.conf
@@ -1,5 +1,8 @@
 set $mod Mod4
 
+exec_always gsettings set org.gnome.desktop.interface cursor-theme $XCURSOR_THEME
+exec_always gsettings set org.gnome.desktop.interface cursor-size $XCURSOR_SIZE
+
 # Monitors
 
 output "Dell Inc. DELL G2723HN 5B0C3H3" {
@@ -10,8 +13,8 @@ output "Dell Inc. DELL G2723HN 5B0C3H3" {
 
 # Window decorations
 
-corner_radius 10
-smart_corner_radius enable
+# corner_radius 10
+# smart_corner_radius enable
 default_border pixel
 gaps {
   outer 20
