feat(sway): Inhibit idle for Windblown

--- a/home-config/dotfiles/sway.conf
+++ b/home-config/dotfiles/sway.conf
@@ -75,3 +75,4 @@ bindsym {
 ## Idle inhibitors
 for_window [title="Element.*" app_id="firefox"] inhibit_idle visible
 for_window [title=".*Discord.*" app_id="firefox"] inhibit_idle visible
+for_window [title="Windblown"] inhibit_idle visible
