feat(sway): Add screenshot keybinds

--- a/home-config/dotfiles/sway.conf
+++ b/home-config/dotfiles/sway.conf
@@ -35,6 +35,17 @@ bindsym {
 floating_modifier $mod
 
 bindsym {
+  $mod+G mode "screenshot"
+}
+
+mode "screenshot" {
+  bindsym Escape mode "default"
+  bindsym c exec grimshot copy active; mode "default"
+  bindsym r exec grimshot copy area; mode "default"
+  bindsym a exec grimshot copy output; mode "default"
+}
+
+bindsym {
   $mod+Up focus up
   $mod+Right focus right
   $mod+Down focus down
