--- a/.sops.yaml
+++ b/.sops.yaml
@@ -1,5 +1,5 @@
 keys:
-  - &tlater 535B61015823443941C744DD12264F6BBDFABA89
+  - &tlater B9C7AE554602D82B1AC2CFD0BC7BB2DB17C78E42!
   - &yui 71132A2D171E79E6A20E81E6C33BC9C8C67C5948
   - &ren 4F82D975EFA78365B552A8B7A0FEFBBAE3259F52
   - &tlater-famedly E3A01E05CDB7D42E9909 B9394D863FBF16FE6D51
