feat(desktop): Add screen locking shortcut

--- a/home-config/dotfiles/sway.conf
+++ b/home-config/dotfiles/sway.conf
@@ -28,7 +28,7 @@ bindsym {
   $mod+Q exec alacritty
   $mod+E exec emacsclient --create-frame --alternate-editor 'emacs'
   $mod+R exec rofi -show drun
-  $mod+L exec keepassxc-copy
+  $mod+L exec systemctl --user start swaylock
 }
 
 ## Window/desktop management
