feat(desktop): Add more workspace commands

--- a/home-config/dotfiles/sway.conf
+++ b/home-config/dotfiles/sway.conf
@@ -84,6 +84,8 @@ bindsym {
 
   $mod+Shift+Left move workspace to output left
   $mod+Shift+Right move workspace to output right
+  $mod+Shift+Up move workspace to output up
+  $mod+Shift+Down move workspace to output down
 }
 
 ## Idle inhibitors
