refactor(edopro): Clean up and update edopro-related derivations
The new edopro release requires a new ocgcore version, and getting
that to build properly was kind of a nice way to make all this work.

--- a/pkgs/nvfetcher.toml
+++ b/pkgs/nvfetcher.toml
@@ -28,6 +28,10 @@ fetch.tarball = "https://github.com/ProjectIgnis/edopro-assets/releases/download
 src.git = "https://github.com/edo9300/irrlicht1-8-4.git"
 fetch.github = "edo9300/irrlicht1-8-4"
 
+[ocgcore]
+src.github = "edo9300/ygopro-core"
+fetch.github = "edo9300/ygopro-core"
+
 [firefox-ui-fix]
 src.github = "black7375/Firefox-UI-Fix"
 fetch.github = "black7375/Firefox-UI-Fix"
