--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,9 +25,7 @@ jobs:
           git_committer_name: GitHub automation
           git_committer_email: tm@tlater.net
       - run: nix flake update --commit-lock-file
-      - run: |
-          echo -e '[keys]\ngithub = "${{ secrets.GITHUB_TOKEN }}"' > /tmp/github-key.toml
-          nix run .#commit-nvfetcher -L
+      - run: nix run .#commit-nvfetcher -L
       - uses: peter-evans/create-pull-request@v6
         with:
           branch: bot/update
