--- a/pkgs/nvfetcher.toml
+++ b/pkgs/nvfetcher.toml
@@ -7,7 +7,7 @@ src.github = "Rikorose/DeepFilterNet"
 fetch.github = "Rikorose/DeepFilterNet"
 
 [drivestrike]
-src.cmd = "./get-drivestrike-version.sh"
+src.cmd = "nu ./get-drivestrike-version.nu"
 fetch.url = "https://app.drivestrike.com/static/yum/drivestrike.rpm"
 
 [eglot-x]
