feat(sway): Switch from rofi to fuzzel
Seems there finally is a good wayland dmenu replacement :D

--- a/home-config/dotfiles/sway.conf
+++ b/home-config/dotfiles/sway.conf
@@ -27,7 +27,7 @@ gaps {
 bindsym {
   $mod+Q exec alacritty
   $mod+E exec emacsclient --create-frame --alternate-editor 'emacs'
-  $mod+R exec rofi -show drun
+  $mod+R exec fuzzel
   $mod+L exec systemctl --user start swaylock
 }
 
