feat(desktop): Switch to using uwsm for session management

--- a/home-config/dotfiles/sway.conf
+++ b/home-config/dotfiles/sway.conf
@@ -1,9 +1,10 @@
-set $mod Mod4
-
-exec_always gsettings set org.gnome.desktop.interface cursor-theme $XCURSOR_THEME
-exec_always gsettings set org.gnome.desktop.interface cursor-size $XCURSOR_SIZE
+exec gsettings set org.gnome.desktop.interface cursor-theme $XCURSOR_THEME
+exec gsettings set org.gnome.desktop.interface cursor-size $XCURSOR_SIZE
+exec uwsm finalize
 
 # Monitors
+
+set $mod Mod4
 
 output "Dell Inc. DELL G2723HN 5B0C3H3" {
   mode 1920x1080@164.997Hz
@@ -25,9 +26,9 @@ gaps {
 
 ## Basic applications
 bindsym {
-  $mod+Q exec alacritty
-  $mod+E exec emacsclient --create-frame --alternate-editor 'emacs'
-  $mod+R exec fuzzel
+  $mod+Q exec uwsm app -- Alacritty.desktop
+  $mod+E exec uwsm app -- emacsclient.desktop
+  $mod+R exec uwsm app -- fuzzel --launch-prefix='uwsm app -- '
   $mod+L exec systemctl --user start swaylock
 }
 
@@ -55,7 +56,7 @@ bindsym {
   $mod+S sticky toggle
 
   $mod+C kill
-  $mod+M exit
+  $mod+M exec uwsm stop
 }
 
 ## Workspaces
